2012-08-23  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-builtins2.cc(eval_builtin): Use builtin_decl_explicit.
	* d-codegen.cc(IRState::emitLocalVar): Use warning.
	(IRState::convertTo): Likewise.
	(IRState::addressOf): Use IRState::markAddressable.
	(IRState::markAddressable): New function.
	(IRState::markUsed): New function.
	(IRState::markRead): New function.
	(IRState::maybeExpandSpecialCall): Use builtin_decl_explicit.
	(IRState::floatMod): Likewise.
	(IRState::exceptionObject): Likewise.
	* d-glue.cc(IdentityExp::toElem): Likewise.
	(EqualExp::toElem): Likewise.
	(PowExp::toElem): Likewise.
	(AssignExp::toElem): Likewise.
	(HaltExp::toElem): Likewise.
	(ArrayLiteralExp::toElem): Likewise.
	(FuncDeclaration::toObjFile): Likewise.
	* d-lang.cc(d_mark_addressable): Remove function.
	(d_mark_exp_read): Remove function.
	* d-lang.h(d_warning): Remove macro.
	(d_built_in_decls): Remove macro.
	* d-objfile.cc(Obj::includelib): Use warning.
	(Obj::startaddress): Likewise.

2012-08-22  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-lang.cc(binary): Moved function from frontend.
	* d-codegen.cc(IRState::extractMethodCallExpr): Update for new C++ VEC
	template in GCC.
	* d-bi-attrs.h(parse_optimize_options): Likewise.
	* d-dmd-gcc.h: Remove ifdef __cplusplus, use GCC_SAFE_DMD.
	* d-gcc-includes.h: Remove ifdef __cplusplus.
	* d-lang.h: Likewise.
	* Make-lang.in: Remove CC and CFLAGS from Makefile, add build rule for
	new texi man pages.
	* gdc.texi: New documentation for GDC.

2012-08-18  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::convertTo): Fix to allow conversion between
	void* and associative arrays.
	(IRState::convertForArgument): Use d_convert_basic.
	(IRState::call): Don't use d_convert_basic, now handled by
	convertForArgument.
	* d-gcc-real.cc(real_t::real_t): Increase real type mode to be greater
	than integer type size to prevent overflow in conversions.
	* d-glue.cc(CastExp::toElem): Don't get implicit AA type.
